# agent-playground

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  test.py
agent-playground/: pyproject.toml
agent_playground/agent/: __init__.py
agent_playground/agent/agent_article_writing/: exec.py  template.py
agent_playground/agent/common_agent/: article_summary.py  mindmap_builder.py  prompts.py
agent_playground/agent/test_data/: transcript.txt
agent_playground/app/: app.py
src/app/: app.py  mindmap_html.py  playground.py
src/bucket/: enum.py  logging.py  mongo.py  setting.py
src/common/: youtube.py
src/component/: __init__.py
src/component/chat_2_relieve/: handler.py
src/model/: agent_history_model.py  api_model.py  setting_model.py
src/mongodb/crud/: agent.py
src/mongodb/model/: common_model.py
